--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,8 @@ button:hover{
 }
 .hero{
   background: linear-gradient(to bottom, #cce9e9, #628d8d);
+  flex-direction: column;
+  /* color: #176969; */
 }
 .temp{
   background: linear-gradient(to bottom, #628d8d, #bbdbda);
@@ -29,3 +31,123 @@ button:hover{
 .feat{
   background: linear-gradient(to bottom, #bbdbda, #628d8d);
 }
+.bg{
+  height: 100vh;
+  width: 100%;
+  margin: 0 auto;
+  background: linear-gradient(to bottom, #628d8d, #bbdbda);
+}
+.bg label,h3{
+  color: rgb(58, 93, 93);
+  font-weight: 600;
+}
+ .bg-card{
+  background: linear-gradient(to bottom, #e0f3f7, #478e96);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+ }
+/* Default styles for larger screens */
+@media (min-width: 992px) {
+  /* Adjust the main section padding and text layout */
+  .hero {
+    flex-direction: row;
+  }
+  .hero > div {
+    flex-basis: 50%;
+  }
+  .hero img {
+    margin-right: 100px;
+  }
+  .temp {
+    padding: 120px;
+  }
+  .feat {
+    padding: 120px;
+  }
+  .navbar-toggler {
+    display: none;
+  }
+}
+
+/* Tablet styles for screens between 768px and 991px */
+@media (max-width: 992px) {
+  /* Adjust main section padding and text layout */
+  .hero {
+    flex-direction: row;
+    margin-top: -80px;
+  }
+  .hero img{
+    width: 100%;
+    height: 35vh;
+    padding: 10px;
+  }
+  .hero > div {
+    flex-basis: auto;
+    margin-bottom: 20px;
+  }
+  .hero img {
+    margin-right: 0;
+  }
+  .temp {
+    padding: 60px;
+  }
+  .feat {
+    padding: 60px;
+  }
+  .cards {
+    flex-direction: row;
+    height: 100vh;
+  }
+  .card {
+    width: 100%;
+    height: 50vh;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  .card-img-top {
+    max-width: 100%;
+  }
+  .card-body {
+    padding: 10px;
+  }
+  .nav-item:hover{
+    transform: scaleY(1.1);
+  }
+}
+
+/* Mobile styles for screens up to 768px */
+@media (max-width: 769px) {
+  .navbar-links {
+    top: 40px;
+  }
+  .hero img{
+    padding:10px;
+  }
+  .hero{
+    margin-top: -80px;
+  }
+  .temp {
+    padding: 40px;
+  }
+  .feat {
+    padding: 40px;
+  }
+  /* Add styles for card responsiveness */
+  .cards {
+    flex-basis: 100%;
+    height: 100vh;
+  }
+  .card {
+    width: 50%;
+    height: 50vh;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  .card-img-top {
+    max-width: 100%;
+  }
+  .card-body {
+    padding: 10px;
+  }
+  /* Adjust other styles as needed */
+}
+
